Fixed scaling erros on small screen added small-side-menu tag for small devices.

--- a/www/html/css/theme.css
+++ b/www/html/css/theme.css
@@ -105,3 +105,9 @@ body {
     display: none;
   }
 }
+
+@media (min-width: 720px) {
+  .small-side-menu {
+    display: block;
+  }
+}
